using overrides to force axios (which gets used in a langchain-community dependency) update because of CVE-2025-27152

--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
         "eslint": "9.23.0",
         "eslint-config-next": "15.2.3",
         "typescript": "5.8.2"
+    },
+    "overrides": {
+        "axios": "1.8.2"
     }
 }
